getting node and sammy ready

--- a/.jshintrc
+++ b/.jshintrc
@@ -94,6 +94,7 @@
         "jQuery": false,
         "mocha": false,
         "Sammy": false,
-        "Gidget": false
+        "Gidget": false,
+        "modules": false
     }
 }
