--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
     "name": "gidget",
     "main": "release/gidget.min.js",
-    "version": "1.0.1",
+    "version": "2.0.0-beta1",
     "homepage": "https://github.com/Acatar/gidget",
     "authors": [
         "&y <andes.collab@gmail.com> (https://github.com/losandes)"
