--- a/examples/node-example/public/scripts/lib/bower.json
+++ b/examples/node-example/public/scripts/lib/bower.json
@@ -11,9 +11,8 @@
   ],
   "dependencies": {
     "hilary": "~3.1.9",
-    "gidget": "~0.0.10",
+    "gidget": "~2.0.1",
     "fetch": "~0.9.0",
-    "es6-promise": "~2.2.0",
-    "sammy": "~0.7.0"
+    "es6-promise": "~2.2.0"
   }
 }
