--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "gidget-solution",
-  "version": "2.2.1",
+  "version": "2.2.2",
   "scripts": {
       "install-dependencies": "cd build; npm install; cd ../tests; npm install; cd browser; bower install; cd ../../examples/node-example; npm run install-dependencies"
   },
   "dependencies": {
-      "hilary": "~4.1.1"
+      "hilary": "4.x"
   },
   "repository": {
       "type": "git",
